--- a/telastcc/css/dado.css
+++ b/telastcc/css/dado.css
@@ -12,7 +12,7 @@ body {
 }
 
 .tabela-conteiner {
-    background-color: #fff;
+    background-color: #5bb2ff;
     margin-left: 120px;
    display: flex;
    border-radius: 10px;
