--- a/telastcc/css/cadastro.css
+++ b/telastcc/css/cadastro.css
@@ -6,7 +6,7 @@
   }
 
   body {
-    background-color: #AECAEF;
+    /* background-color: #AECAEF; */
     background-size: cover;
     /* background-position-x: 850px;
     background-position-y: 100px; */
@@ -18,7 +18,7 @@ a:hover {
     color: royalblue;
 }
 #cad-conteiner {
-    background-color: #72cdfe;
+    background-color: #5bb2ff;
     display: flex;
     width: 1200px;
     height: 550px;
@@ -65,7 +65,7 @@ padding-right: 10px;
     padding-right: 40px;
 }
 #cad-conteiners {
-    background-color: #72cdfe;
+    background-color: #5bb2ff;
     height: 430px;
     width: 600px;
     margin-right: auto;
@@ -106,7 +106,7 @@ padding-right: 10px;
     display: inline-block;
 }
 #titulo2 {
-    background-color: #72cdfe;
+    background-color: #5bb2ff;
     margin-left: 40px;
     width: 1200px;
    /*display: inline-block;
@@ -115,7 +115,7 @@ padding-right: 10px;
 }
 #cad-conteiner3 {
    /* background-color: rgb(99, 149, 240);*/
-    background-color: #72cdfe;
+    background-color: #5bb2ff;
     height: 470px;
     width: 580px;
     margin-right: auto;
