--- a/telastcc/css/checagem.css
+++ b/telastcc/css/checagem.css
@@ -2,9 +2,49 @@ body {
     background-color: aqua;
 }
 .conteiner {
-    width: 40%;
-    height: 500px;
-    overflow: auto;
-    margin-top: 100px;
-    margin-left: 100px;
+        background-color: #5bb2ff;
+        height: 550px;
+        width: 850px;
+        margin-left: auto;
+        margin-right: 200px;
+        padding: 20px 30px;
+        overflow:auto; 
+        margin-top: 50px;
+        border-radius: 10px;
+        text-transform: uppercase;
+}
+.conteiner a {
+    color: rgb(0, 0, 0);}
+       
+    a {
+        all: unset;
+        cursor: pointer;
+}
+thead{
+    background-color: #2ca0ff;
+}
+
+td, th {
+    border-width: medium;
+    border-style: solid;
+    border-color: rgb(57, 166, 233);
+    /* border-radius: 10px; */
+    text-align: center;
+    font-size: 20px;
+}
+/* tamanho do nome dos idosos */
+td.texto, th.texto {
+    width: 200px;
+    height: 40px;
+}
+
+td.text-center, th.text-center {
+    width: 30px;
+    height: 20px;
+    
+}
+
+td.id, th.id {
+    width: 30px;
+    height: 20px;
 }
