--- a/telastcc/css/dado.css
+++ b/telastcc/css/dado.css
@@ -14,6 +14,7 @@ body {
 .tabela-conteiner {
     background-color: #5bb2ff;
     margin-left: 120px;
+    margin-top: 2%;
    display: flex;
    border-radius: 10px;
 }
@@ -23,7 +24,6 @@ body {
     margin-left: 18px;
     margin-top: 20px;
     overflow: hidden;
-    border-radius: 12px;
 
 }
 /* dado do responsavel */
@@ -32,7 +32,6 @@ body {
     margin-left: 40px;
     margin-top: 20px;
     overflow: hidden;
-    border-radius: 12px;
 
 }
 /* tamanho da tabela */
@@ -65,14 +64,14 @@ a#cadastro {
 
 /* configurações do "dadomedidoso" */
 .remedio {
-        background-color: #72cdfe;
-        height: 550px;
-        width: 850px;
-        margin-left: auto;
-        margin-right: 200px;
+        background-color: #5BB2FF;
+        height: 70%;
+        width: 77%;
+        margin-left: 20%;
+        margin-right: 10%;
         padding: 20px 30px;
         overflow:auto; 
-        margin-top: 10vh;
+        margin-top: 1%;
         border-radius: 10px;
         
 }
@@ -98,49 +97,32 @@ a#cadastro {
     overflow: hidden;
     border-radius: 12px;
 }
-.titulo {
-    background-color: rgb(19, 165, 214);
-    border-radius: 10px;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    margin-left: 150px;
-    width: 300px;
-    text-align: center;
-    display: inline-block;
-}
-/*
-.tabela-conteiner#1 {
-    display: flex;
+td, th {
+    border-width: medium;
+    border-style: solid;
+    border-color: rgb(57, 166, 233);
+    text-align: left;
+    font-size: large;
+
 }
 
-.remedio {
-    opacity: 1;
-    width: 700px;
-    margin-left: 10px;
-    margin-top: 30px;
-    overflow: hidden;
-    border-radius: 12px;
+/* tamanho do nome dos idosos */
+td.texto, th.texto {
+    width: 600px;
+    height: 30px;
+    padding-left: 15px;
 }
-.accordion {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-  }
-  
-  .active, .accordion:hover {
-    background-color: #ccc; 
-  }
-  
-  .panel {
-    padding: 0 18px;
-    display: none;
-    background-color: white;
-    overflow: hidden;
-  }*/
+
+td.text-center, th.text-center {
+    width: 50px;
+    height: 40px;
+    
+}
+
+td.id, th.id {
+    width: 50px;
+    height: 40px;
+}
+thead{
+    background-color: #2ca0ff;
+}
