--- a/telastcc/css/estoque.css
+++ b/telastcc/css/estoque.css
@@ -19,7 +19,7 @@
         color: royalblue;
     
     }
-    #lista-conteiner {
+/*     #lista-conteiner {
         background-color: #5bb2ff;
         height: 550px;
         width: 900px;
@@ -30,16 +30,16 @@
         margin-top: 10vh;
         border-radius: 10px;
         
-        
-    }#lista-estoque {
+ } */
+    #lista-estoque {
         background-color: #5bb2ff;
-        height: 550px;
-        width: 850px;
+        height: 70%;
+        width: 70%;
         margin-left: auto;
         margin-right: 200px;
         padding: 20px 30px;
         overflow:auto; 
-        margin-top: 10vh;
+        margin-top: 3%;
         border-radius: 10px;
         
     }
