--- a/telastcc/css/checagem.css
+++ b/telastcc/css/checagem.css
@@ -2,7 +2,7 @@ body {
     background-color: aqua;
 }
 .conteiner {
-        background-color: #5bb2ff;
+        background-color: #218380;
         height: 550px;
         width: 850px;
         margin-left: auto;
