--- a/telastcc/css/navbar.css
+++ b/telastcc/css/navbar.css
@@ -19,7 +19,7 @@ body{
     left: 0;
     height: 100%;
     width: 78px;
-    background: #34abeb;
+    background: #8F2D56;
     padding: 20px 14px;
     transition: all 0.5s ease;
 }
@@ -156,7 +156,7 @@ background: #fff;
     position: relative;
     padding: 10px 6px;
     height: 60px;
-    background: #278fc7;
+    background: #D81159;
 }
 .profile_content .profile .profile_details{
     display: flex;
