--- a/telastcc/css/checagem.css
+++ b/telastcc/css/checagem.css
@@ -1,17 +1,28 @@
-body {
-    background-color: aqua;
-}
-.conteiner {
-        background-color: #218380;
-        height: 550px;
-        width: 850px;
-        margin-left: auto;
-        margin-right: 200px;
-        padding: 20px 30px;
-        overflow:auto; 
-        margin-top: 50px;
-        border-radius: 10px;
-        text-transform: uppercase;
+
+#titulo1 {
+    margin-left: 40%;}
+    #titulo2 {
+        margin-left: 30%;}
+        .conteiner {
+            max-height: 70%;
+    width: 60%;
+    margin-left: auto;
+    margin-right: 200px;
+    padding: 20px 30px;
+    overflow:auto; 
+    margin-top: 50px;
+    border-radius: 10px;
+    text-transform: uppercase;
+    border:solid 5px;
+    border-radius:20px 20px 20px 20px;
+    border-color: #fff;
+        }
+#um {
+        background-color:#A8DADC;
+    }
+#dois {
+    background-color:#A8DADC;
+    
 }
 .conteiner a {
     color: rgb(0, 0, 0);}
@@ -21,20 +32,20 @@ body {
         cursor: pointer;
 }
 thead{
-    background-color: #2ca0ff;
+    background-color: #457B9D;
 }
 
 td, th {
     border-width: medium;
     border-style: solid;
-    border-color: rgb(57, 166, 233);
+    border-color: rgb(255, 23, 23);
     /* border-radius: 10px; */
     text-align: center;
     font-size: 20px;
 }
 /* tamanho do nome dos idosos */
 td.texto, th.texto {
-    width: 200px;
+    width: 100px;
     height: 40px;
 }
 
