--- a/telastcc/css/dado.css
+++ b/telastcc/css/dado.css
@@ -107,7 +107,7 @@ a#cadastro {
     border-radius: 12px;
 }
 #med {
-    margin-top: 40px;
+    margin-top: 0,5%;
 }
 td, th {
     border-width: medium;
