--- a/telastcc/css/checagem.css
+++ b/telastcc/css/checagem.css
@@ -1,4 +1,3 @@
-
 #titulo1 {
     margin-left: 40%;}
     #titulo2 {
@@ -25,7 +24,7 @@
     
 }
 .conteiner a {
-    color: rgb(0, 0, 0);}
+    color:#fff;}
        
     a {
         all: unset;
@@ -42,6 +41,7 @@ td, th {
     /* border-radius: 10px; */
     text-align: center;
     font-size: 20px;
+color: #fff;
 }
 /* tamanho do nome dos idosos */
 td.texto, th.texto {
