--- a/telastcc/css/estoque.css
+++ b/telastcc/css/estoque.css
@@ -36,18 +36,18 @@
  } */
     #lista-estoque {
         border:solid 5px;
-        border-radius:20px 20px 20px 20px;
+        border-radius:0px 20px 0px 20px;
         border-color: #fff;
-        background-color: #A8DADC;
-        max-height: 70%;
-        width: 70%;
-        margin-left: auto;
-        margin-right: 200px;
-        padding: 20px 30px;
-        overflow:auto; 
-        margin-top: 3%;
-        border-radius: 10px;
-        
+            background-color: #A8DADC;
+            max-height: 70%;
+            width: 83%;
+            margin-left: 13%;
+            margin-right: 10%;
+            padding: 20px 30px;
+            overflow:auto; 
+            margin-top: 1%;
+            border-radius: 10px;
+            
     }
     a {
     font-weight: bold;
@@ -88,4 +88,7 @@
 }
     #cadastro {
         width: 20px;
+    }
+    #estoq {
+        margin-top: 0,5%;
     }
