--- a/telastcc/css/login.css
+++ b/telastcc/css/login.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -82,7 +81,7 @@ border: none;
 border-radius: 20px;
 margin-top: 30px;
 color: #fff;
-background-color: royalblue;
+background-color: #17a2b8;
 cursor: pointer;
  }
  
