--- a/telastcc/css/navbar.css
+++ b/telastcc/css/navbar.css
@@ -80,6 +80,28 @@ body{
     text-transform: uppercase;
 
 }
+.botaoo a:hover .tooltip{
+    transition: all 0.5s ease;
+    opacity: 1;
+    top: 50%;
+}
+.botaoo .tooltip {
+    position: absolute;
+    left: 122px;
+    top: 0;
+    transform: translateY(-50%, -50%);
+    border-radius: 6px;
+    height: 35px;
+    width: 122px;
+    background: #fff;
+    line-height: 35px;
+    text-align: center;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    transition: 0;
+    opacity: 0;
+    pointer-events: none;
+    display: block;
+}
 .sidebar ul li .tooltip {
     position: absolute;
     left: 122px;
@@ -109,6 +131,7 @@ body{
     opacity: 1;
     top: 50%;
 }
+
 .sidebar ul li input{
     position: absolute;
     height: 100%;
@@ -247,6 +270,7 @@ background: #fff;
         /* width: 300px; */
         text-align: center;
         display: inline-block;
+text-transform: uppercase;
     }
     * {
         scrollbar-width: auto;
@@ -268,7 +292,16 @@ background: #fff;
         border: 3px solid #ffffff;
       }
     
-      
+      /*Resize the wrap to see the search bar change!*/
+  .wrap{
+    width: 30%;
+    position: relative;
+    top: 10px;
+    left: 45%;
+    right: auto;
+    transform: translate(-50%, -50%);
+	
+  }
 .search {
     width: 100%;
     position:static   ;
@@ -303,11 +336,4 @@ background: #fff;
     font-size: 20px;
   }
   
-  /*Resize the wrap to see the search bar change!*/
-  .wrap{
-    width: 30%;
-    position: absolute;
-    top: 16%;
-    left: 55%;
-    transform: translate(-50%, -50%);
-  }
+  
