--- a/telastcc/css/cadastro.css
+++ b/telastcc/css/cadastro.css
@@ -1,4 +1,4 @@
-.container {
+/*.container {
     display: block;
     position: relative;
     padding-left: 35px;
@@ -12,14 +12,14 @@
   }
   
   /* Hide the browser's default radio button */
-  .container input {
+ /* .container input {
     position: absolute;
     opacity: 0;
     cursor: pointer;
   }
   
   /* Create a custom radio button */
-  .checkmark {
+  /*.checkmark {
     position: absolute;
     top: 0;
     left: 0;
@@ -30,36 +30,36 @@
   }
   
   /* On mouse-over, add a grey background color */
-  .container:hover input ~ .checkmark {
+ /* .container:hover input ~ .checkmark {
     background-color: #ccc;
   }
   
   /* When the radio button is checked, add a blue background */
-  .container input:checked ~ .checkmark {
+ /* .container input:checked ~ .checkmark {
     background-color: #2196F3;
   }
   
   /* Create the indicator (the dot/circle - hidden when not checked) */
-  .checkmark:after {
+ /* .checkmark:after {
     content: "";
     position: absolute;
     display: none;
   }
   
   /* Show the indicator (dot/circle) when checked */
-  .container input:checked ~ .checkmark:after {
+  /*.container input:checked ~ .checkmark:after {
     display: block;
   }
   
   /* Style the indicator (dot/circle) */
-  .container .checkmark:after {
+  /*.container .checkmark:after {
        top: 9px;
       left: 9px;
       width: 8px;
       height: 8px;
       border-radius: 50%;
       background: white;
-  }
+  }*/
 #titulo1 {
     margin-left: 30%;}
 *{
@@ -87,8 +87,8 @@ a:hover {
     border-color: #fff;
     background-color: #82c0cc;
     display: flex;
-    width: 80%;
-    height: 75%;
+    max-width: 80%;
+    min-height: 75%;
     border-radius: 10px;
     margin-left: 16%;
      margin-top: 1%; 
