--- a/telastcc/css/checagem.css
+++ b/telastcc/css/checagem.css
@@ -3,6 +3,7 @@
     #titulo2 {
         margin-left: 30%;}
         .conteiner {
+            align-items: center;
             max-height: 70%;
     width: 60%;
     margin-left: auto;
@@ -16,19 +17,16 @@
     border-radius:20px 20px 20px 20px;
     border-color: #fff;
         }
-#um {
+#um, #dois {
         background-color:#A8DADC;
     }
-#dois {
-    background-color:#A8DADC;
-    
-}
 .conteiner a {
     color:#fff;}
        
     a {
         all: unset;
         cursor: pointer;
+        display: block;
 }
 thead{
     background-color: #457B9D;
@@ -58,4 +56,49 @@ td.text-center, th.text-center {
 td.id, th.id {
     width: 30px;
     height: 20px;
+}
+#idoso {
+    width: 90%;
+}
+#check {
+    width: 10%;
+}
+#btn {
+    width: auto;
+    height: auto;
+    background-color: aqua;
+    display: block;
+}
+
+@media (max-device-width: 700px) {
+    #titulo1 {
+        margin-left: 20%;}
+.conteiner {
+align-items: center;
+max-height: 50%;
+width: 73%;
+margin-left: 25%;
+margin-right: 10%;
+margin-top: 10%;
+padding: 10px 10px;
+overflow:auto; 
+margin-top: 50px;
+border-radius: 10px;
+text-transform: uppercase;
+border:solid 5px;
+border-radius: 10px;
+border-color: #fff;
+font-size: small;
+    }
+    td.text-center, th.text-center {
+        width: 10%;
+        height: 20px;
+        
+    }
+    /* .table td {
+        
+        width: unset;
+        height: unset;
+    } */
+
 }
