--- a/telastcc/css/checagem.css
+++ b/telastcc/css/checagem.css
@@ -1,7 +1,7 @@
 #titulo1 {
     margin-left: 40%;}
     #titulo2 {
-        margin-left: 30%;}
+        margin-left: 26%;}
         .conteiner {
             align-items: center;
             max-height: 70%;
@@ -57,22 +57,48 @@ td.id, th.id {
     width: 30px;
     height: 20px;
 }
+h3, h4 {
+    display: none;
+}
+i {
+font-size: 30px;
+}
+.col {
+    /* margin-left: 22px; */
+}
+#btn {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 180px;
+    height: 30px;
+    background-color: #a8dadc67;
+    /* display: block; */
+}
 #idoso {
     width: 90%;
 }
 #check {
     width: 10%;
 }
-#btn {
-    width: auto;
-    height: auto;
-    background-color: aqua;
-    display: block;
+#icone {
+    width: 100px;
 }
-
 @media (max-device-width: 700px) {
+    h2 {
+        display: none;
+    }
+    h3 {
+        display: block;
+    }
     #titulo1 {
-        margin-left: 20%;}
+        padding: 5px;
+        margin-left: 25%;
+    }
+    #titulo1 {
+        padding: 5px;
+        margin-right: 20%;
+    }
 .conteiner {
 align-items: center;
 max-height: 50%;
@@ -101,4 +127,22 @@ font-size: small;
         height: unset;
     } */
 
+
+#idoso {
+    width: 90%;
+}
+#check {
+    width: 10%;
+}
+#btn {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30px;
+    height: 30px;
+    display: block;
+}
+#text {
+    display: none;
+}
 }
