--- a/telastcc/css/cadastro.css
+++ b/telastcc/css/cadastro.css
@@ -1,67 +1,34 @@
-/*.container {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-  
-  /* Hide the browser's default radio button */
- /* .container input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-  }
-  
-  /* Create a custom radio button */
-  /*.checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
-    border-radius: 50%;
-  }
-  
-  /* On mouse-over, add a grey background color */
- /* .container:hover input ~ .checkmark {
-    background-color: #ccc;
-  }
-  
-  /* When the radio button is checked, add a blue background */
- /* .container input:checked ~ .checkmark {
-    background-color: #2196F3;
-  }
-  
-  /* Create the indicator (the dot/circle - hidden when not checked) */
- /* .checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-  }
-  
-  /* Show the indicator (dot/circle) when checked */
-  /*.container input:checked ~ .checkmark:after {
-    display: block;
-  }
-  
-  /* Style the indicator (dot/circle) */
-  /*.container .checkmark:after {
-       top: 9px;
-      left: 9px;
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      background: white;
-  }*/
-#titulo1 {
-    margin-left: 30%;}
+
+#titulo_estoque {
+    margin-left: 35%;
+        width: 31%;
+}
+#titulo_idoso {
+    /* margin-left: 30%; */
+    margin: 1% auto;
+        width: 28%;
+}
+#titulo_edita_idoso {
+    margin-left: 35%;
+        width: 30%;
+}
+#titulo_edita_estoque {
+    margin-left: 39.5%;
+        width: 23%;
+}
+#titulo_med_idoso {
+    margin-left: 20%;
+        width: 57%;
+}
+#titulo_med {
+    margin-left: 28%;
+        width: 37%;
+}
+#titulo_edit_remed_idoso {
+    margin-left: 29%;
+        width: 40%;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -90,7 +57,7 @@ a:hover {
     max-width: 80%;
     min-height: 75%;
     border-radius: 10px;
-    margin-left: 16%;
+    margin-left: 13%;
      margin-top: 1%; 
 }
 .idoso{
@@ -132,7 +99,9 @@ padding-right: 10px;
     padding-right: 40px;
 }
 
-
+#outro {
+    margin-bottom: 20px;
+}
 
 
 
@@ -141,7 +110,7 @@ padding-right: 10px;
     border-radius:0px 20px 0px 20px;
     border-color: #fff;
     background-color: #82c0cc;
-    height: 50%;
+    /* height: 50%; */
     width: 40%;
     margin-right: auto;
     padding: 10px 30px;
@@ -164,31 +133,24 @@ padding-right: 10px;
     border-radius:0px 20px 0px 20px;
     border-color: #fff;
     background-color: #82c0cc;
-    height: 50%;
+    /* height: 50%; */
     width: 40%;
     margin-right: auto;
     padding: 10px 30px;
     margin-top: 5%;
-    margin-left: 27%;
+    margin-left: 31%;
     border-radius: 10px;
     text-align: justify;
 }
 
-#titulo2 {
-    background-color: #82c0cc;
-    margin-left: 40px;
-    width: 1200px;
-   /*display: inline-block;
-    float:left;
- margin-left: 00px; */
-}
+
 #cad-remed-idoso-conteiner {
     border:solid 5px;
     border-radius:0px 20px 0px 20px;
     border-color: #fff;
    /* background-color: rgb(99, 149, 240);*/
    background-color: #82c0cc;
-   height: 80%;
+   /* height: 80%; */
    width: 40%;
    margin-right: auto;
    padding: 10px 30px;
@@ -228,4 +190,139 @@ text-align:    center;
          background-color: #fff;
          border-radius: 5px;
          padding: 7px;
+     }
+     input:invalid {
+         animation: shake .3s;
+     }
+
+     @keyframes shake {
+        25% {transform: translateX(4px)}
+        50% {transform: translateX(-4px)}
+        75% {transform: translateX(4px)}
+     }
+
+     @media (max-device-width: 700px) {
+        #titulo_edita_estoque {
+            margin-left: 30%;
+                width: 60%;
+        }
+        #titulo_edita_idoso {
+            margin-left: 28%;
+                width: 60%;
+        }
+        #titulo_estoque {
+            margin-left: 25%;
+                width: 61%;
+        }
+        #titulo_idoso {
+            margin-left: 25%;
+                width: 70%;
+        }
+        #titulo_med_idoso {
+            margin-left: 26%;
+                width: 67%;
+        }
+        #titulo_med {
+            margin-left: 33%;
+                width: 57%;
+        }
+        
+        #cad-idoso-conteiner .form-control {
+             width: 57% !important;
+         }
+        #cad-idoso-conteiner {
+            border:solid 5px;
+            border-radius:0px 20px 0px 20px;
+            border-color: #fff;
+            background-color: #82c0cc;
+            display:grid;
+            width: 75% !important;
+            overflow-y: auto !important;
+            height: 80% !important;
+            border-radius: 10px;
+            margin-left: 23%;
+             margin-top: 5%; 
+        }
+        
+        .idoso1{
+            /* margin-top: 10px; */
+            /* margin-bottom: 10px; */
+            text-align: left;
+            width: 400px;
+            height: 300px;
+            padding: 10px 10px;
+        /* padding-right: 10px; */
+        /* background: blue; */
+        }
+        .idoso2{
+            margin-top: 10px;
+            margin-bottom: 10px;
+        /* background-color: red; */
+            width: 400px;
+            height: 260px;
+            padding: 10px 20px;
+            text-align: left;
+            /* padding-right: 5px; */
+            /* margin-right: 30px; */
+        }
+        
+        .resp{
+            margin-top: 10px;
+            margin-bottom: 10px;
+            width: 400px;
+            /* background-color: pink; */
+            padding: 10px 20px;
+            /* margin-right: 10px; */
+            text-align: left;
+            padding-right: 5px;
+        }
+        
+        #cad-remed-conteiner {
+            border:solid 5px;
+           border-radius:0px 20px 0px 20px;
+           border-color: #fff;
+           background-color: #82c0cc;
+          
+           width: 75%;
+           margin-right: auto;
+           padding: 10px 20px;
+           margin-top: 5%;
+           margin-left: 23%;
+           border-radius: 10px;
+           text-align: justify;
+       }
+       form#2 {
+        margin-top: 60px;
+        margin-bottom: 50px;
+        margin-left: 40px;
+     }
+     #cad-estoque-conteiner{
+        border:solid 5px;
+        border-radius:0px 20px 0px 20px;
+        border-color: #fff;
+        background-color: #82c0cc;
+        /* height: 45%; */
+        width: 75%;
+        margin-right: auto;
+        padding: 10px 10px;
+        margin-top: 5%;
+        margin-left: 23%;
+        border-radius: 10px;
+        text-align: justify;
+    }
+    #cad-remed-idoso-conteiner {
+        border:solid 5px;
+        border-radius:0px 20px 0px 20px;
+        border-color: #fff;
+       /* background-color: rgb(99, 149, 240);*/
+       background-color: #82c0cc;
+       /* height: 70%; */
+       width: 77%;
+       margin-right: auto;
+       padding: 10px 20px;
+       margin-top: 2%;
+       margin-left: 22%;
+       border-radius: 10px;
+       text-align: justify;
+    }
      }
