--- a/telastcc/css/checagem.css
+++ b/telastcc/css/checagem.css
@@ -1,13 +1,18 @@
-#titulo1 {
-    margin-left: 40%;}
-    #titulo2 {
-        margin-left: 26%;}
-        .conteiner {
-            align-items: center;
-            max-height: 70%;
+#titulo_checagem {
+    margin-left: 40%;
+    width: 25%;
+}
+
+#titulo_checagem_remed {
+    margin-left: 21%;
+    width: 64%;
+}
+    .conteiner {
+    align-items: center;
+    max-height: 70%;
     width: 60%;
     margin-left: auto;
-    margin-right: 200px;
+    margin-right: 17%;
     padding: 20px 30px;
     overflow:auto; 
     margin-top: 50px;
@@ -57,7 +62,7 @@ td.id, th.id {
     width: 30px;
     height: 20px;
 }
-h3, h4 {
+h3 {
     display: none;
 }
 i {
@@ -85,6 +90,14 @@ font-size: 30px;
     width: 100px;
 }
 @media (max-device-width: 700px) {
+    #titulo_checagem {
+        margin-left: 28%;
+        width: 66%;
+    }
+    #titulo_checagem_remed {
+        margin-left: 25%;
+        width: 70%;
+    }
     h2 {
         display: none;
     }
@@ -145,4 +158,50 @@ font-size: small;
 #text {
     display: none;
 }
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 30vh; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 10%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    color: #000;
+  }
+  .modal td {
+      color: #000;
+  }
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    text-align: justify;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: left;
+    margin-left: auto;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .modal table {
+      background-color: #A8DADC;
+      margin: -5px;
+  }
 }
