--- a/telastcc/css/dado.css
+++ b/telastcc/css/dado.css
@@ -1,5 +1,14 @@
-#titulo1 {
-    margin-left: 40%;
+#titulo_remed {
+    margin-left: 43.5%;
+    width: 22%;
+}
+#titulo_idoso {
+    margin-left: 36%;
+    width: 23.2%;
+}
+#titulo_remed_idoso {
+    margin-left: 35%;
+    width: 33%;
 }
 *{
     margin: 0;
@@ -8,6 +17,8 @@
     font-family: Helvetica;
 }
 body {
+    width: 100vh;
+    height: 100vh;
     background-color: #AECAEF;
     background-size: cover;
     margin-top: 7vh;
@@ -40,13 +51,20 @@ body {
     overflow: hidden;
 
 }
+.um .resposta {
+    width: 400px;
+}
+.dois .resposta {
+    width: 400px;
+}
 /* tamanho da tabela */
 td.pergunta {
     width: 300px;
+    
 }
 /* configurações dos botoes */
 .botoes {
-    margin-top: 75px;
+    margin-top: 4%;
     border-radius: 12px;
     position: fixed;
     align-items: center;
@@ -91,13 +109,13 @@ a#cadastro {
 
 /* css recebe idoso */
 
-#recebeidoso {
+/* #recebeidoso {
     width: 600px;
     margin-left: 40px;
     margin-top: 20px;
     overflow: hidden;
     border-radius: 12px;
-}
+} */
 
 #receberesp {
     width: 600px;
@@ -139,3 +157,129 @@ td.id, th.id {
 thead{
     background-color: #457B9D;
 }
+
+@media (max-device-width: 700px) {
+    #titulo_remed {
+        margin-left: 30%;
+        width: 57%;
+    }
+    #titulo_idoso {
+        margin-left: 30%;
+        width: 62%;
+    }
+    #titulo13 {
+        margin-left: 23%;
+    }
+    #titulo_remed_idoso {
+        margin-left: 25%;
+        width: 70%;
+    }
+    .tabela-conteiner {
+        width: 75% !important;
+        border:solid 5px;
+        border-radius:0px 20px 0px 20px;
+        border-color: #fff;
+        background-color: #A8DADC;
+        margin-left: 23%;
+        margin-top: 25%;
+       display:grid;
+       border-radius: 10px;
+       
+    }
+    .um {
+        width: 90% !important;
+        margin-left: 10px;
+        margin-top: 20px;
+        overflow: hidden;
+    
+    }
+    /* dado do responsavel */
+    .dois {
+        width: 550px;
+        margin-left: 10px;
+        margin-top: 20px;
+        overflow: hidden;
+    
+    }
+    table {
+        font-size: unset;
+    }
+    .botoes {
+        margin-top: 4%;
+        border-radius: 12px;
+        position: absolute;
+        align-items: center;
+        color: inherit;
+        left: 30%;
+        display: flex;
+        
+    }
+    .botao {
+        /* padding-left: 8px; */
+        /* background-color: #fff; */
+        border-radius: 10px;
+        margin-left: 15px;
+        /* margin-bottom: 10px; */
+    }
+    #cadastro {
+        padding: 10px !important;
+    }
+    .remedio {
+    border:solid 5px;
+    border-radius:0px 20px 0px 20px;
+    border-color: #fff;
+        background-color: #A8DADC;
+        max-height: 70%;
+        width: 75%;
+        margin-left: 23%;
+        margin-right: 10%;
+        padding: 20px 10px;
+        overflow:auto; 
+        margin-top: 5%;
+        border-radius: 10px;
+        
+}
+.wrap{
+    width: 95% !important;
+    position: relative;
+    top: 10px;
+    margin-left: 7%;
+    right: auto;
+    transform: translate(-50%, -50%);
+	justify-content: center;
+  }
+  .idoso {
+    margin-left: 2px !important;
+    width: 260px !important;
+
+  }
+  td.pergunta {
+      display: relative;
+    width: 130px !important;
+    font-size: small !important;
+    padding: 1px !important;
+}
+    .dois {
+        margin-top: -1% !important;
+    }
+    .remedio#med {
+        border:solid 5px;
+        border-radius:0px 20px 0px 20px;
+        border-color: #fff;
+            background-color: #A8DADC;
+            max-height: 70%;
+            width: 75%;
+            margin-left: 23%;
+            /* margin-right: 0%; */
+            padding: 20px 3px;
+            overflow:auto; 
+            margin-top: 5%;
+            border-radius: 10px;
+            
+    }
+    .modal-content {
+        margin-top: -130px !important;
+        margin-bottom: 100px !important;
+    }
+    
+ }
